Renamed images, rewrote CSS

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Julia Craig dot CA</title>
-  <meta name="description" content="Homepage of Julia Craig">
+  <title>Julia Craig: Artist, Illustrator</title>
+  <meta name="description" content="Julia Craig’s online portfolio.">
   <meta name="author" content="Julia Craig">
 
   <!-- Mobile Specific Metas
@@ -15,7 +15,9 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:500,700" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;600&display=swap" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
