--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Portfolio - Julia Craig</title>
+  <title>Portfolio — Julia Craig</title>
   <meta name="description" content="Portfolio of Julia Craig">
   <meta name="author" content="Julia Craig">
 
@@ -15,7 +15,9 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:500,700" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;600&display=swap" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -46,25 +48,31 @@
         </div>
 
         <!-- first row of images -->
-        <div class="pure-g pics__row">
+        <div class="pics__row">
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Pointilism Lion">
-              <img class="pure-img" src="i/lion.JPG" alt="Pointilism Lion">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/lion-2018.jpg" alt="Pointilism Lion">
+            <figcaption>
+              <span>Pointilism Lion</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Coeur de Pirate">
-              <img class="pure-img" src="i/french.JPG" alt="Coeur de Pirate, comparison photo and drawing">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/french-2018.jpg" alt="Coeur de Pirate, comparison photo and drawing">
+            <figcaption>
+              <span>Coeur de Pirate</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Tiger in Snow">
-              <img class="pure-img" src="i/tiger.JPG" alt="Tiger">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/tiger-2018.jpg" alt="Tiger">
+            <figcaption>
+              <span>Tiger in snow</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
         </div><!-- end of .pure-g (end of the row)-->
 
@@ -77,48 +85,55 @@
         </div>
 
         <!-- first row of images -->
-        <div class="pure-g pics__row">
+        <div class="pics__row">
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Batman">
-              <img class="pure-img" src="i/batman.JPG" alt="Batman">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/batman-2018.jpg" alt="Batman">
+            <figcaption>
+              <span>Batman</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Wolverine">
-              <img class="pure-img" src="i/hugh.JPG" alt="Wolverine">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/hugh-2018.jpg" alt="Wolverine">
+            <figcaption>
+              <span>Wolverine</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Iron Man">
-              <img class="pure-img" src="i/iron.JPG" alt="Iron Man">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/iron-2018.jpg" alt="Iron Man">
+            <figcaption>
+              <span>Iron Man</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-		</div><!-- end of pure-g (end of the row)-->
+          <figure>
+            <img class="pure-img" src="i/Ben-2018.jpg" alt="Ben Howard">
+            <figcaption>
+              <span>Ben Howard</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-		 <!-- second row of images -->
-        <div class="pure-g pics__row">
+          <figure>
+            <img class="pure-img" src="i/thth-2018.jpg" alt="The Head and the Heart">
+            <figcaption>
+              <span>The Head and the Heart</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Ben Howard">
-              <img class="pure-img" src="i/Ben.JPG" alt="Ben Howard">
-            </span>
-          </div>
-
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="The Head and the Heart">
-              <img class="pure-img" src="i/thth.JPG" alt="The Head and the Heart">
-            </span>
-          </div>
-
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Patrick Watson">
-              <img class="pure-img" src="i/watson.JPG" alt="Patrick Watson">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/watson-2018.jpg" alt="Patrick Watson">
+            <figcaption>
+              <span>Patrick Watson</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
         </div><!-- end of .pure-g (end of the row)-->
 
@@ -130,48 +145,55 @@
         </div>
 
         <!-- first row of images -->
-        <div class="pure-g pics__row">
+        <div class="pics__row">
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Leonardo Dicaprio">
-              <img class="pure-img" src="i/leo.JPG" alt="Leonardo Dicaprio">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/leo-2018.jpg" alt="Leonardo Dicaprio">
+            <figcaption>
+              <span>Leonardo Dicaprio</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Hear me roar">
-              <img class="pure-img" src="i/roar.JPG" alt="Lion">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/roar-2018.jpg" alt="Lion">
+            <figcaption>
+              <span>Hear me roar</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Trapped">
-              <img class="pure-img" src="i/octo.JPG" alt="Octopus in Lightbulb">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/octo-2018.jpg" alt="Octopus in Lightbulb">
+            <figcaption>
+              <span>Trapped</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-        </div><!-- end of .pure-g (end of the row)-->
+          <figure>
+            <img class="pure-img" src="i/ducks-2018.jpg" alt="Ducklings">
+            <figcaption>
+              <span>Ducklings</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-        <!-- second row of images -->
-        <div class="pure-g pics__row">
+          <figure>
+            <img class="pure-img" src="i/breaking-2018.jpg" alt="Breaking Bad">
+            <figcaption>
+              <span>Breaking Bad</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Ducklings">
-              <img class="pure-img" src="i/ducks.JPG" alt="Ducklings">
-            </span>
-          </div>
-
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Breaking Bad">
-              <img class="pure-img" src="i/breaking.JPG" alt="Breaking Bad">
-            </span>
-          </div>
-
-          <div class="pure-u-1 pure-u-md-1-3">
-            <span title="Wiz Khalifa">
-              <img class="pure-img" src="i/wiz.JPG" alt="Wiz Khalifa">
-            </span>
-          </div>
+          <figure>
+            <img class="pure-img" src="i/wiz-2018.jpg" alt="Wiz Khalifa">
+            <figcaption>
+              <span>Wiz Khalifa</span>
+              <span>2018</span>
+            </figcaption>
+          </figure>
 
         </div><!-- end of .pure-g (end of the row)-->
 
