Add links to all the images

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,29 +50,35 @@
         <!-- first row of images -->
         <div class="pics__row">
 
-          <figure>
-            <img class="pure-img" src="i/lion-2018.jpg" alt="Pointilism Lion">
-            <figcaption>
-              <span>Pointilism Lion</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/lion-2018.jpg">
+            <figure>
+                <img class="pure-img" src="i/lion-2018.jpg" alt="Pointilism Lion">
+              <figcaption>
+                <span>Pointilism Lion</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/french-2018.jpg" alt="Coeur de Pirate, comparison photo and drawing">
-            <figcaption>
-              <span>Coeur de Pirate</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/french-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/french-2018.jpg" alt="Coeur de Pirate, comparison photo and drawing">
+              <figcaption>
+                <span>Coeur de Pirate</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/tiger-2018.jpg" alt="Tiger">
-            <figcaption>
-              <span>Tiger in snow</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/tiger-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/tiger-2018.jpg" alt="Tiger">
+              <figcaption>
+                <span>Tiger in snow</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
         </div><!-- end of .pure-g (end of the row)-->
 
@@ -87,53 +93,65 @@
         <!-- first row of images -->
         <div class="pics__row">
 
-          <figure>
-            <img class="pure-img" src="i/batman-2018.jpg" alt="Batman">
-            <figcaption>
-              <span>Batman</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/batman-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/batman-2018.jpg" alt="Batman">
+              <figcaption>
+                <span>Batman</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/hugh-2018.jpg" alt="Wolverine">
-            <figcaption>
-              <span>Wolverine</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/hugh-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/hugh-2018.jpg" alt="Wolverine">
+              <figcaption>
+                <span>Wolverine</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/iron-2018.jpg" alt="Iron Man">
-            <figcaption>
-              <span>Iron Man</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/iron-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/iron-2018.jpg" alt="Iron Man">
+              <figcaption>
+                <span>Iron Man</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/Ben-2018.jpg" alt="Ben Howard">
-            <figcaption>
-              <span>Ben Howard</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/ben-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/Ben-2018.jpg" alt="Ben Howard">
+              <figcaption>
+                <span>Ben Howard</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/thth-2018.jpg" alt="The Head and the Heart">
-            <figcaption>
-              <span>The Head and the Heart</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/thth-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/thth-2018.jpg" alt="The Head and the Heart">
+              <figcaption>
+                <span>The Head and the Heart</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/watson-2018.jpg" alt="Patrick Watson">
-            <figcaption>
-              <span>Patrick Watson</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/watson-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/watson-2018.jpg" alt="Patrick Watson">
+              <figcaption>
+                <span>Patrick Watson</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
         </div><!-- end of .pure-g (end of the row)-->
 
@@ -147,53 +165,65 @@
         <!-- first row of images -->
         <div class="pics__row">
 
-          <figure>
-            <img class="pure-img" src="i/leo-2018.jpg" alt="Leonardo Dicaprio">
-            <figcaption>
-              <span>Leonardo Dicaprio</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/leo-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/leo-2018.jpg" alt="Leonardo Dicaprio">
+              <figcaption>
+                <span>Leonardo Dicaprio</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/roar-2018.jpg" alt="Lion">
-            <figcaption>
-              <span>Hear me roar</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/roar-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/roar-2018.jpg" alt="Lion">
+              <figcaption>
+                <span>Hear me roar</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/octo-2018.jpg" alt="Octopus in Lightbulb">
-            <figcaption>
-              <span>Trapped</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/octo-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/octo-2018.jpg" alt="Octopus in Lightbulb">
+              <figcaption>
+                <span>Trapped</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/ducks-2018.jpg" alt="Ducklings">
-            <figcaption>
-              <span>Ducklings</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/ducks-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/ducks-2018.jpg" alt="Ducklings">
+              <figcaption>
+                <span>Ducklings</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/breaking-2018.jpg" alt="Breaking Bad">
-            <figcaption>
-              <span>Breaking Bad</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/breaking-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/breaking-2018.jpg" alt="Breaking Bad">
+              <figcaption>
+                <span>Breaking Bad</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
-          <figure>
-            <img class="pure-img" src="i/wiz-2018.jpg" alt="Wiz Khalifa">
-            <figcaption>
-              <span>Wiz Khalifa</span>
-              <span>2018</span>
-            </figcaption>
-          </figure>
+          <a href="i/wiz-2018.jpg">
+            <figure>
+              <img class="pure-img" src="i/wiz-2018.jpg" alt="Wiz Khalifa">
+              <figcaption>
+                <span>Wiz Khalifa</span>
+                <span>2018</span>
+              </figcaption>
+            </figure>
+          </a>
 
         </div><!-- end of .pure-g (end of the row)-->
 
