--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
     <div class="content content--absolute content--full-width">
       <div class="container centered">
-        <a href="mailto:juliacraig3@cmail.carleton.ca" class="link__email" title="pls no spam" target="_blank">email</a><!--
+        <a href="mailto:juliacraig003@gmail.com" class="link__email" title="pls no spam" target="_blank">email</a><!--
 
         --><a href="https://twitter.com/JayCraig1101" class="link__twitter" title="pls follow me" target="_blank">twitter</a><!--
 
