Update to use instagram

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
       <div class="container centered">
         <a href="mailto:juliacraig003@gmail.com" class="link__email" title="pls no spam" target="_blank">email</a><!--
 
-        --><a href="https://twitter.com/JayCraig1101" class="link__twitter" title="pls follow me" target="_blank">twitter</a><!--
+        --><a href="https://www.instagram.com/jaycrides/" class="link__twitter" title="pls follow me" target="_blank">instagram</a><!--
 
         --><a href="https://www.facebook.com/julia.craig.904" class="link__facebook" title="pls be my friend" target="_blank">facebook</a>
       </div>
