Remove accent from filename

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,10 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!--link rel="icon" type="image/png" href="i/favicon.png"-->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
 </head>
 <body class="portfolio-page position-relative">
@@ -409,11 +412,11 @@
       </figure>
       </a>
       
-      <a href="i/Jägermeister-2015.jpg">
-      <img class="pure-img" src="i/Jägermeister-2015.jpg" alt="Jägermeister">
+      <a href="i/Jagermeister-2015.jpg">
+      <img class="pure-img" src="i/Jagermeister-2015.jpg" alt="Jagermeister">
       <figure>
       <figcaption>
-      <span>Jägermeister</span>
+      <span>Jagermeister</span>
       <span>2015</span>
       </figcaption>
       </figure>
@@ -498,7 +501,7 @@
       </figcaption>
       </figure>
       </a>
-      
+
       </div> <!-- end of .pics__row (end of the row)-->
       </div> <!-- end of .year -->        
 
