Add Ella and Louis picture

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,16 @@
       </div>
       <div class="pics__row">
       
+      <a href="i/Ella-and-Louis-2024.jpg">
+        <img class="pure-img" src="i/Ella-and-Louis-2024.jpg" alt="Ella and Louis">
+        <figure>
+        <figcaption>
+        <span>Ella and Louis</span>
+        <span>2024</span>
+        </figcaption>
+        </figure>
+        </a>
+
       <a href="i/McCurry-2023.jpg">
       <img class="pure-img" src="i/McCurry-2023.jpg" alt="McCurry">
       <figure>
